Changes from 0.62.1 to 0.65.0:
  - added Taiwan Chinese (zh_TW), Hungarian (hu_HU), Latvian (lv_LV),
    Korean (ko_KR), Norwegian (no_NO), Polish (pl_PL), Romanian (ro_RO) and
    Ukrainian (uk_UA) nls files and updated most of the others.
  - added French man pages
  - remove slit and netwm as compile time options
  - strip much of BaseDisplay's original functionality and move it to the
    blackbox class.
  - huge amounts of internal cleanups
  - added emacs local variables to each file that prevent the addition of tabs
  - added a Util.cc file which contains useful functions with no obvious home.
  - move code over to the STL
  - removed several unused variables and otherwise reduced the memory usage
    of the objects in Blackbox.  For the record the binary is roughly 100k
    larger than 0.62.0 and that is mostly due to the STL but there is also a
    fair bit of new code.  However for the most part blackbox runs faster and
    is still one of the leanest window managers out there today.
  - bsetroot now sets _XROOTPMAP_ID, so pseudo transparent apps will be happy
  - beginnings of a strut implementation.  toolbar and slit are removed from
    the available screen area if 'full maximize' is not set
  - XReparentWindow sends an UnmapNotify to the window manager however
    in certain cases the window is already unmapped so the window manager
    never gets the event and the unmapNotify event is where reparentNotify was
    handled.  Added a reparentNotifyEvent handler in the BlackboxWindow class
    and a new case in the Blackbox class's process_event function.
  - no more blackbox->grab/ungrab calls everywhere
  - compression of motion and expose
  - Now we have one function which turns ~/ into /home/user/.  This is now
    called everywhere this expansion should be done.  Even added this to the
    resource.menu_file so now the menu file may be specified as
    ~/blackbox_menu.
  - added a TimerQueue which is a priority_queue with the ability to release