@@ -99,3 +99,32 @@ hp9000/715-HP/UX 10.20 (with egcs 1.1.1)
 
 Please email shaleh@debian.org for other success reports.
 
+Seeking Help:
+
+MAILING LISTS
+The mailing list archive can be found at:
+http://asgardsrealm.net/lurker/splash/index.html
+
+The mailing list addresses are:
+
+    List posts (restricted to subscribers)
+    blackbox@asgardsrealm.net
+
+    Subscribe
+    blackbox-subscribe@asgardsrealm.net
+    blackbox-subscribe-john=host.domain@asgardsrealm.net
+
+    Unsubscribe
+    blackbox-unsubscribe@asgardsrealm.net
+    blackbox-unsubscribe-john=host.domain@asgardsrealm.net
+
+    List Help
+    blackbox-help@asgardsrealm.net
+
+WEB SITES
+    General info:
+    http://blackboxwm.sourceforge.net/
+ 
+    Development website:
+    http://sourceforge.net/projects/blackboxwm/
+
